--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,6 +69,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/summitpublicschoolssps/jobs/1938417'>Job Application for Manager of Data Engineering & Info Systems at Summit Public Schools (SPS)</a></h5> 
+<p><span class="badge badge-light">Redwood City, CA</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oqBbbfw7&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nmIToMwC'>NICE Careers - Data Engineer - Associate</a></h5> 
 <p><span class="badge badge-light">Austin, Texas  Chicago, Illinois  Austin Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -81,7 +85,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/away/jobs/1939666'>Job Application for Data Engineer at Away</a></h5> 
+<h5><a href='https://boards.greenhouse.io/away/jobs/1939666'>Job Application for Data Engineer at Away</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -97,11 +101,11 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466689-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466689-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466753-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466753-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -117,7 +121,7 @@
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/2b55f74a-7827-4770-a092-9b14c7ac842f'>Recurly - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/2b55f74a-7827-4770-a092-9b14c7ac842f'>Recurly - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -129,7 +133,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/litify/jobs/1933087'>Job Application for Data Engineer (Salesforce) at Litify</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/litify/jobs/1933087'>Job Application for Data Engineer (Salesforce) at Litify</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -137,7 +141,7 @@
 <p><span class="badge badge-light">Portland, OR  ?  Irvine</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=s0RQZgwr&__jvsc=Twitter&bid=n3d9oMw4'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=s0RQZgwr&__jvsc=Twitter&bid=n3d9oMw4'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -184,7 +188,7 @@ analysts et data scientists. Sous la supervision du Head of Data, votre r?le est
 <p>Oct 15, 2019 ... TrueData is a leading mobile data platform that works with app publishers who 
 generate mobile data and the apps, agencies, brands, and ad tech companies?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... We are looking for a ?Data Engineer?. Ideal candidate should have a Bachelor's 
 degree in Computer Science with 2 ? 3 years of programming experience on?...</p>
@@ -204,7 +208,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oncase.recruitee.com/o/data-engineer-sao-paulo'>
+<h5><a href='https://oncase.recruitee.com/o/data-engineer-sao-paulo'>
       Data Engineer - S?o Paulo - Oncase
     </a></h5> 
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil  S?o Paulo  S?o Paulo</span></p>
@@ -226,7 +230,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Seattle, WA  Seattle</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584819'>Stellenangebot: Data Engineer (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584819'>Stellenangebot: Data Engineer (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -262,11 +266,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openclassrooms.recruitee.com/o/data-engineer'>
+<h5><a href='https://openclassrooms.recruitee.com/o/data-engineer'>
       Data Engineer - OpenClassrooms
     </a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
@@ -292,11 +296,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Associate-Director-Data-Engineering'>Associate Director, Data Engineering - Assembly - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Associate-Director-Data-Engineering'>Associate Director, Data Engineering - Assembly - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318417-senior-data-engineer'>CapTech Consulting Senior Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318417-senior-data-engineer'>CapTech Consulting Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -324,11 +328,11 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698293537-data-engineer'>Devoteam Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698293537-data-engineer'>Devoteam Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277725-data-engineer'>VISIAN Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -417,7 +421,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Oakland, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222117-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222117-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -425,7 +429,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Manager-Data-Engineering'>Manager, Data Engineering - Assembly - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://assembly.applytojob.com/apply/qAc4rpa0wc/Manager-Data-Engineering'>Manager, Data Engineering - Assembly - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -478,10 +482,6 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
       Data Engineer - xneelo
     </a></h5> 
 <p><span class="badge badge-light">Cape Town South Africa</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trianz/job/ogApbfwa'>Trianz Careers - Data Engineer</a></h5> 
-<p><span class="badge badge-light">San Jose, California  Santa Clara, California  San Francisco, California  Austin, Texas</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
