--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -78,7 +78,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489115002'>Job Application for iOS Engineer - Customer Experience at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489115002'>Job Application for iOS Engineer - Customer Experience at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -98,7 +98,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medopad/5f857a6d-d098-45bd-bbd5-a42e1ce4c869'>Medopad - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/medopad/5f857a6d-d098-45bd-bbd5-a42e1ce4c869'>Medopad - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -144,7 +144,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Cape Town  Cape Town</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://cover.applytojob.com/apply/48QYWZw4o0/Senior-IOS-Engineer'>Senior iOS Engineer - Cover - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cover.applytojob.com/apply/48QYWZw4o0/Senior-IOS-Engineer'>Senior iOS Engineer - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -230,7 +230,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pipeworks/job/oq6nbfwO'>Pipeworks Studios Careers - Software Engineer, Madden NFL</a></h5> 
+<h5><a href='https://jobs.jobvite.com/pipeworks/job/oq6nbfwO'>Pipeworks Studios Careers - Software Engineer, Madden NFL</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -247,7 +247,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p>4 days ago ... Software Development Engineer | US - Sunnyvale ? Backend Java Developer - 
 Yahoo! Finance | US - Sunnyvale ? Software Dev Engineer | US - Sunnyvale.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/playstudios-inc/job/oeAkbfw3'>PLAYSTUDIOS, Inc. Careers - BI Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/playstudios-inc/job/oeAkbfw3'>PLAYSTUDIOS, Inc. Careers - BI Data Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>22 hours ago ... PLAYSTUDIOS is a developer of engaging casual games for the world's largest 
 social and mobile platforms. Founded by a team of experienced gaming and?...</p>
@@ -308,7 +308,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1840598?gh_src=o3unj4'>Job Application for iOS Engineer at Trunk Club</a></h5> 
+<h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1840598?gh_src=o3unj4'>Job Application for iOS Engineer at Trunk Club</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Working for Trunk Club. When you join Trunk Club, you join the Nordstrom family. 
 Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
@@ -317,7 +317,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">London  London Oxford</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
+<h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -329,7 +329,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476156002'>Job Application for Senior iOS Engineer at Blink Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476156002'>Job Application for Senior iOS Engineer at Blink Health</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -402,7 +402,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<h5><a href='https://bios-3.workable.com/j/5A4F7AF638'>BIOS - Jobs: Dev Ops Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bios-3.workable.com/j/5A4F7AF638'>BIOS - Jobs: Dev Ops Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
@@ -453,7 +453,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1902024'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1902024'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
