--- a/ios-developer.html
+++ b/ios-developer.html
@@ -175,7 +175,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Backend Application Developer (Node.js) at Semios.</p>
 <hr/>
@@ -277,7 +277,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mediamonks.workable.com/j/A8744F8CB8'>MediaMonks - Jobs: iOS Developer at MediaMonks MX - Apply online</a></h5> 
+<h5><a href='https://mediamonks.workable.com/j/A8744F8CB8'>MediaMonks - Jobs: iOS Developer at MediaMonks MX - Apply online</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico  Mexico</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -429,7 +429,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 23, 2019 ... Apply online for the job of JavaScript Developer at Semios.</p>
 <hr/>
-<h5><a href='https://1871.workable.com/j/8FB8A0FEDB'>1871 Member Companies - Jobs: Mobile iOS Developer - Qooley - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://1871.workable.com/j/8FB8A0FEDB'>1871 Member Companies - Jobs: Mobile iOS Developer - Qooley - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
